--- a/faith.html
+++ b/faith.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Faith Hub</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-
-<div class="back-button-container">
-  <a href="https://scytale94.github.io/" class="tile back-button">⬅ Home</a>
-</div>
-
 <body>
+
+  <!-- Main Heading -->
   <h1>Faith Hub</h1>
 
-  <!-- Back to Home Button (UPDATED) -->
-  <div style="margin-bottom: 20px;">
-    <button onclick="location.href='index.html'">⬅ Home</button>
+  <!-- Centered Back Button -->
+  <div class="back-button-container">
+    <a href="https://scytale94.github.io/" class="tile back-button">
+      ⬅ Home
+    </a>
   </div>
 
-  <!-- Daily Scripture -->
+  <!-- Daily Scripture Section -->
   <div class="section">
     <h2>Daily Scripture</h2>
     <div class="verse-box" id="verseDisplay">Loading verse...</div>
     <button onclick="loadRandomVerse()">Next Verse</button>
   </div>
 
-  <!-- Prayer List -->
+  <!-- Prayer List Section -->
   <div class="section">
     <h2>Prayer List</h2>
     <ul id="prayerList">
@@ -63,7 +61,7 @@
     </ul>
   </div>
 
-  <!-- Favorite Verses -->
+  <!-- Favorite Verses Section -->
   <div class="section">
     <h2>Favorite Verses (Concept Summaries)</h2>
     <ul>
@@ -120,5 +118,6 @@
     }
     loadRandomVerse();
   </script>
+
 </body>
 </html>
